deploy.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: prefer-dual-stack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefer-dual-stack-webhook
  namespace: prefer-dual-stack  
  labels:
    app: prefer-dual-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prefer-dual-stack
  template:
    metadata:
      labels:
        app: prefer-dual-stack
    spec:
      containers:
      - name: server
        args:
          - -tlscert=/etc/certs/cert
          - -tlskey=/etc/certs/key
        image: ghcr.io/tibordp/prefer-dual-stack-webhook:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8443
            scheme: HTTPS
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/certs
          readOnly: true    
      volumes:
      - name: tls-certs
        secret:
          secretName: prefer-dual-stack-admission
---
# Service must be created first, as otherwise the MutatingWebhookConfiguration
# will reject it.

apiVersion: v1
kind: Service
metadata:
  name: prefer-dual-stack-webhook
  namespace: prefer-dual-stack
spec:
  ipFamilyPolicy: PreferDualStack
  selector:
    app: prefer-dual-stack
  ports:
    - port: 443
      targetPort: 8443  
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration 
metadata:
  name: prefer-dual-stack-admission
webhooks:
  - name: prefer-dual-stack.tibordp.github.io
    matchPolicy: Equivalent
    rules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE"]
      resources:   ["services"]
      scope:       "Namespaced"
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        namespace: prefer-dual-stack
        name: prefer-dual-stack-webhook
        path: /mutate/services

# Interesting part ends here, the rest is just so that the server certificates are 
# automatically generated on apply.
